--- a/tdmpc2/config.yaml
+++ b/tdmpc2/config.yaml
@@ -62,7 +62,7 @@ dropout: 0.01
 simnorm_dim: 8
 
 # logging
-wandb_project: tdmpc2
+wandb_project: tdmpc2-dk
 wandb_entity: robin-abba
 wandb_silent: false
 disable_wandb: false
