--- a/tdmpc2/config.yaml
+++ b/tdmpc2/config.yaml
@@ -6,12 +6,12 @@ task: basic-wipe
 obs: state
 
 # evaluation
-checkpoint: ???
+checkpoint: checkpoint_1
 eval_episodes: 10
 eval_freq: 10_000
 
 # training
-steps: 400_000
+steps: 150_000
 batch_size: 256
 reward_coef: 0.1
 value_coef: 0.1
@@ -25,8 +25,8 @@ discount_denom: 5
 discount_min: 0.95
 discount_max: 0.995
 buffer_size: 1_000_000
-exp_name: default
-data_dir: ???
+exp_name: test
+data_dir: data_dir
 
 # planning
 mpc: true
@@ -74,9 +74,9 @@ save_agent: true
 seed: 1
 
 # convenience
-work_dir: ???
-task_title: ???
-multitask: ???
+work_dir: work_dir
+task_title: task_title
+multitask: true
 tasks: ???
 obs_shape: ???
 action_dim: ???
