Fixed issues with the world model, enabling it to run

--- a/tdmpc2/config.yaml
+++ b/tdmpc2/config.yaml
@@ -65,7 +65,7 @@ simnorm_dim: 8
 wandb_project: tdmpc2-dk
 wandb_entity: robin-abba
 wandb_silent: true
-disable_wandb: true
+disable_wandb: false
 save_csv: true
 
 # misc
